Página home criada, página para cadastrar uma receita criada, bootstrap adicionado

--- a/frontend/src/components/NavBar/style.scss
+++ b/frontend/src/components/NavBar/style.scss
@@ -15,7 +15,10 @@ nav{
       margin-right: 40px;
 
       hr{
-         height: 100%;
+         -webkit-transform:rotate(90deg);
+         width:100px;
+         left:130px;
+         border:2px;
       }
 
       .circle{
