--- a/frontend/src/views/Home/style.scss
+++ b/frontend/src/views/Home/style.scss
@@ -68,6 +68,7 @@
          height: 50px;
          background-color: $mainorange;
          border-radius: 3px;
+         border: none;
          color: white;
          margin-top: 35px;
          text-decoration: none;
@@ -77,6 +78,9 @@
             margin-right: 5px;
          }
 
+      }
+      .add-recipe-btn:hover{
+         background-color: rgb(255, 111, 8);
       }
       
    }
@@ -127,6 +131,10 @@
             min-width: 160px;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
             z-index: 1;
+
+            a{
+               cursor: pointer;
+            }
 
             .select-icon{
                width: 20px;
