--- a/frontend/src/views/Home/style.scss
+++ b/frontend/src/views/Home/style.scss
@@ -7,11 +7,39 @@
    flex-direction: column;
    margin-top: 70px;
 
+   .routes{
+
+      width: 130px;
+      position: absolute;
+      right: 70px;
+      display: flex;
+      justify-content: space-around;
+
+      .arrow{
+         width: 12px;
+      }
+   
+      a{
+         font-size: 15px;
+         text-decoration: none;
+
+      }
+      .home-link{
+         color: $mainorange;
+      }
+
+      .recipies-link{
+         color:rgb(182, 182, 182);
+      }
+      
+   }
+
    .up-div{
       width: 100%;
       height: 200px;
       display: flex;
       justify-content: space-around;
+      margin-top: 30px;
 
       .search-recipe{
 
@@ -186,7 +214,13 @@
       }
    }
 
-
+   .under-table-line{
+      width: 90%;
+      border: 1px solid $mainorange;
+      box-shadow: 0px 1px 3px rgb(196, 108, 46);
+      margin: 0 auto;
+      
+   }
    
 
 }
