--- a/frontend/src/views/Home/style.scss
+++ b/frontend/src/views/Home/style.scss
@@ -221,6 +221,14 @@
       margin: 0 auto;
       
    }
+
+   .modal-content{
+      hr{
+         color: $mainorange;
+      }
+   }
+
+   
    
 
 }
