--- a/frontend/src/components/NavBar/style.scss
+++ b/frontend/src/components/NavBar/style.scss
@@ -7,6 +7,10 @@ nav{
    height: 120px;
    background-color: rgba(255, 170, 86, 0.5);
 
+   .logo{
+      margin-top: 5px;
+   }
+
    .user-section{
 
       display: flex;
